modulo3: aula 5 fix homework 5